samples/_failures_safe/1761294408_aa6c3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_049e2025.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_049e2025.c:152:5: error: expected declaration or statement at end of input
  152 |     (*pos)++;
      |     ^
